--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
       src="https://kit.fontawesome.com/da35fc8e81.js"
       crossorigin="anonymous"
     ></script>
-    <script src="/main .js"></script>
+    <script src="./main .js"></script>
   </body>
 </html>
