--- a/index.html
+++ b/index.html
@@ -9,25 +9,31 @@
     <link rel="shortcut icon" href="/img/click icon.svg" type="image/x-icon" />
   </head>
   <body>
-    <main class="main">
-      <h3 class="h3">Timer</h3>
-      <div class="timer_box">
-        <div class="sec">1 Sec</div>
-        <div class="sec">5 Sec</div>
-        <div class="timer">5</div>
-        <div class="sec">10 Sec</div>
-        <div class="sec">15 Sec</div>
-      </div>
-      <h3 class="h3 h3_count">Counter</h3>
-      <div class="count_box">0</div>
-      <div class="click_box">Click To Start</div>
-      <section class="score">
-        <h2 class="score_h2">YOUR SCORE</h2>
-        <div class="stars"></div>
-        <p class="score_p"></p>
-        <button class="score_btn">TRY AGAIN</button>
-      </section>
-    </main>
+    <div class="container">
+      <main class="main">
+        <h3 class="h3">Timer</h3>
+        <div class="timer_box">
+          <div class="second_div">
+            <div class="sec">1 Sec</div>
+            <div class="sec">5 Sec</div>
+          </div>
+          <div class="timer">5</div>
+          <div class="second_div">
+            <div class="sec">10 Sec</div>
+            <div class="sec">15 Sec</div>
+          </div>
+        </div>
+        <h3 class="h3 h3_count">Counter</h3>
+        <div class="count_box">0</div>
+        <div class="click_box">Click To Start</div>
+        <section class="score">
+          <h2 class="score_h2">YOUR SCORE</h2>
+          <div class="stars"></div>
+          <p class="score_p"></p>
+          <button class="score_btn">TRY AGAIN</button>
+        </section>
+      </main>
+    </div>
     <script
       src="https://kit.fontawesome.com/da35fc8e81.js"
       crossorigin="anonymous"
