--- a/index.html
+++ b/index.html
@@ -19,22 +19,23 @@
 
       <main>
         <section class="game container">
-          <div class="timer_line">
-            <h3 class="h3">Timer</h3>
-          </div>
-
-          <div class="timer_box">
-            <div class="timer">5</div>
-            <div class="timer_sec">
-              <div class="sec">1 <span>S</span></div>
-              <div class="sec">5 <span>S</span></div>
-              <div class="sec">10 <span>S</span></div>
-              <div class="sec">15 <span>S</span></div>
+          <div class="game_box">
+            <h3 class="h3 timer_line">Timer</h3>            
+            <div class="timer_box">
+              <div class="timer">5</div>
+              <div class="timer_sec">
+                <div class="sec">1 <span>S</span></div>
+                <div class="sec">5 <span>S</span></div>
+                <div class="sec">10 <span>S</span></div>
+                <div class="sec">15 <span>S</span></div>
+              </div>
             </div>
           </div>
 
-          <h3 class="h3 h3_count">Counter</h3>
-          <div class="count_box">0</div>
+          <div class="game_box">
+            <h3 class="h3 h3_count">Counter</h3>
+            <div class="count_box">0</div>
+          </div>
 
           <div class="click_box">Click to Start</div>
 
